--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>learn git</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <h1>Изучаем git</h1>
