change previouse commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>learn git</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body style="background: #000 !important">
+<body>
 <h1>Изучаем git</h1>
 <img src="manager.jpg" />
 <ol>
